--- a/server/build.gradle
+++ b/server/build.gradle
@@ -23,11 +23,15 @@ dependencies {
 distributions {
     main {
         contents {
-	    into('client') {
-		from { project(':client').build.outputs.files }
-		fileMode = 0755
-	    }
-	}
+            into('client') {
+                from { project(':client').build.outputs.files }
+                fileMode = 0755
+            }
+        }
+        into('lib/client/public') {
+            from { project(':client').build.outputs.files }
+            fileMode = 0755
+        }
     }
 }
 
@@ -39,3 +43,7 @@ task runWithTests {
 runWithTests.dependsOn test
 
 test.dependsOn(":client:runClientTests")
+
+startScripts {
+    classpath += files('client')
+}
